@@ -9,7 +9,7 @@
 </p>
 <p align="center">
   <a href="https://trino.io/download.html" style="text-decoration: none"><img
-    src="https://img.shields.io/maven-central/v/io.trino/trino-server.svg?label=Trino"
+    src="https://img.shields.io/github/v/release/trinodb/trino"
     alt="Trino download"
   /></a>
   <a href="https://github.com/jvm-repo-rebuild/reproducible-central/blob/master/content/io/trino/README.md" style="text-decoration: none"><img
@@ -28,23 +28,8 @@
 
 ## Development
 
-Learn about development for all Trino organization projects:
-
-* [Vision](https://trino.io/development/vision)
-* [Contribution process](https://trino.io/development/process#contribution-process)
-* [Pull request and commit guidelines](https://trino.io/development/process#pull-request-and-commit-guidelines-)
-* [Release note guidelines](https://trino.io/development/process#release-note-guidelines-)
-
-Further information in the [development section of the
-website](https://trino.io/development) includes different roles, like
-contributors, reviewers, and maintainers, related processes, and other aspects.
-
-See [the Trino developer guide](https://trino.io/docs/current/develop.html) for
-information about the SPI, implementing connectors and other plugins plugins,
-the client protocol, writing tests and other lower level details.
-
-See [DEVELOPMENT](.github/DEVELOPMENT.md) for information about code style,
-development process, and guidelines.
+See [DEVELOPMENT](.github/DEVELOPMENT.md) for information about development and release process,
+code style and guidelines for implementors of Trino plugins.
 
 See [CONTRIBUTING](.github/CONTRIBUTING.md) for contribution requirements.
 
@@ -59,9 +44,9 @@ Trino supports [reproducible builds](https://reproducible-builds.org) as of vers
 
 * Mac OS X or Linux
   * Note that some npm packages used to build the web UI are only available
-    for x86 architectures, so if you're building on Apple Silicon, you need 
-    to have Rosetta 2 installed
-* Java 24.0.1+, 64-bit
+    for x86 architectures, so if you're building on Apple Silicon, you need
+    to have Rosetta 2 installed.
+* Java 25.0.1+, 64-bit
 * Docker
   * Turn SELinux or other systems disabling write access to the local checkout
     off, to allow containers to mount parts of the Trino source tree
@@ -89,16 +74,16 @@ locally for the areas of code that you change.
 After building Trino for the first time, you can load the project into your IDE
 and run the server.  We recommend using
 [IntelliJ IDEA](http://www.jetbrains.com/idea/). Because Trino is a standard
-Maven project, you easily can import it into your IDE.  In IntelliJ, choose
+Maven project, you can easily import it into your IDE. In IntelliJ, choose
 *Open Project* from the *Quick Start* box or choose *Open*
 from the *File* menu and select the root `pom.xml` file.
 
-After opening the project in IntelliJ, double check that the Java SDK is
+After opening the project in IntelliJ, double-check that the Java SDK is
 properly configured for the project:
 
 * Open the File menu and select Project Structure
-* In the SDKs section, ensure that JDK 24 is selected (create one if none exist)
-* In the Project section, ensure the Project language level is set to 24
+* In the SDKs section, ensure that JDK 25 is selected (create one if none exist)
+* In the Project section, ensure the Project language level is set to 25
 
 ### Running a testing server
 
@@ -106,7 +91,18 @@ The simplest way to run Trino for development is to run the `TpchQueryRunner`
 class. It will start a development version of the server that is configured with
 the TPCH connector. You can then use the CLI to execute queries against this
 server. Many other connectors have their own `*QueryRunner` class that you can
-use when working on a specific connector.
+use when working on a specific connector. The VM option generally required here
+is `--add-modules jdk.incubator.vector`, but various `*QueryRunner` classes
+might require additional options (if necessary, check the `air.test.jvm.additional-arguments`
+property in the `pom.xml` file of the module from which the runner comes).
+
+### Running tests from the IDE
+
+When running individual test classes directly from IntelliJ, you need to
+configure the JUnit run configuration template. Go to Run/Debug Configurations >
+Edit Configuration Templates > JUnit > VM options and set the value to
+`-ea --add-modules=jdk.incubator.vector`. Some tests may rely on JVM options provided
+by airbase (e.g. `-XX:-OmitStackTraceInFastThrow`), so check for that too.
 
 ### Running the full server
 
@@ -114,7 +110,7 @@ Trino comes with sample configuration that should work out-of-the-box for
 development. Use the following options to create a run configuration:
 
 * Main Class: `io.trino.server.DevelopmentServer`
-* VM Options: `-ea -Dconfig=etc/config.properties -Dlog.levels-file=etc/log.properties -Djdk.attach.allowAttachSelf=true --sun-misc-unsafe-memory-access=allow`
+* VM Options: `-ea -Dconfig=etc/config.properties -Dlog.levels-file=etc/log.properties -Djdk.attach.allowAttachSelf=true --sun-misc-unsafe-memory-access=allow --add-modules jdk.incubator.vector`
 * Working directory: `$MODULE_DIR$`
 * Use classpath of module: `trino-server-dev`
 
