@@ -14,7 +14,7 @@
 package io.trino.server.security;
 
 import com.fasterxml.jackson.annotation.JsonProperty;
-import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.json.JsonMapper;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
@@ -22,6 +22,7 @@ import com.google.common.io.Resources;
 import com.google.inject.Inject;
 import com.google.inject.Key;
 import com.google.inject.Module;
+import io.airlift.http.server.HttpConfig;
 import io.airlift.http.server.HttpServerConfig;
 import io.airlift.http.server.HttpServerInfo;
 import io.airlift.http.server.testing.TestingHttpServer;
@@ -72,7 +73,6 @@ import java.net.HttpCookie;
 import java.net.URI;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.security.Principal;
 import java.security.PrivateKey;
 import java.security.PublicKey;
@@ -83,13 +83,10 @@ import java.util.Date;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.Set;
 import java.util.UUID;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
-import static com.google.common.base.MoreObjects.firstNonNull;
 import static com.google.common.hash.Hashing.sha256;
 import static com.google.common.net.HttpHeaders.AUTHORIZATION;
 import static com.google.inject.multibindings.OptionalBinder.newOptionalBinder;
@@ -99,7 +96,7 @@ import static io.jsonwebtoken.Claims.AUDIENCE;
 import static io.jsonwebtoken.security.Keys.hmacShaKeyFor;
 import static io.trino.client.OkHttpUtil.setupSsl;
 import static io.trino.client.ProtocolHeaders.TRINO_HEADERS;
-import static io.trino.metadata.TestMetadataManager.createTestMetadataManager;
+import static io.trino.metadata.TestingMetadataManager.createTestingMetadataManager;
 import static io.trino.server.security.ResourceSecurity.AccessType.AUTHENTICATED_USER;
 import static io.trino.server.security.ResourceSecurity.AccessType.WEB_UI;
 import static io.trino.server.security.jwt.JwtUtil.newJwtBuilder;
@@ -121,6 +118,7 @@ import static java.lang.String.format;
 import static java.nio.charset.StandardCharsets.UTF_8;
 import static java.time.Instant.now;
 import static java.util.Objects.requireNonNull;
+import static java.util.Objects.requireNonNullElse;
 import static java.util.concurrent.TimeUnit.MINUTES;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.TestInstance.Lifecycle.PER_CLASS;
@@ -148,13 +146,12 @@ public class TestResourceSecurity
     private static final String MANAGEMENT_PASSWORD = "management-password";
     private static final String HMAC_KEY = Resources.getResource("hmac_key.txt").getPath();
     private static final String JWK_KEY_ID = "test-rsa";
-    private static final String GROUPS_CLAIM = "groups";
     private static final String TRINO_AUDIENCE = "trino-client";
     private static final String ADDITIONAL_AUDIENCE = "https://external-service.com";
     private static final String UNTRUSTED_CLIENT_AUDIENCE = "https://untrusted.com";
     private static final PrivateKey JWK_PRIVATE_KEY;
     private static final PublicKey JWK_PUBLIC_KEY;
-    private static final ObjectMapper json = new ObjectMapper();
+    private static final JsonMapper json = new JsonMapper();
 
     static {
         try {
@@ -488,7 +485,7 @@ public class TestResourceSecurity
 
             assertAuthenticationDisabled(httpServerInfo.getHttpUri());
 
-            SecretKey hmac = hmacShaKeyFor(Base64.getDecoder().decode(Files.readString(Paths.get(HMAC_KEY)).trim()));
+            SecretKey hmac = hmacShaKeyFor(Base64.getDecoder().decode(Files.readString(Path.of(HMAC_KEY)).trim()));
             JwtBuilder tokenBuilder = newJwtBuilder()
                     .signWith(hmac)
                     .expiration(Date.from(ZonedDateTime.now().plusMinutes(5).toInstant()));
@@ -508,7 +505,7 @@ public class TestResourceSecurity
             String token = tokenBuilder.compact();
 
             OkHttpClient clientWithJwt = client.newBuilder()
-                    .authenticator((route, response) -> response.request().newBuilder()
+                    .authenticator((_, response) -> response.request().newBuilder()
                             .header(AUTHORIZATION, "Bearer " + token)
                             .build())
                     .build();
@@ -542,7 +539,7 @@ public class TestResourceSecurity
                     .compact();
 
             OkHttpClient clientWithJwt = client.newBuilder()
-                    .authenticator((route, response) -> response.request().newBuilder()
+                    .authenticator((_, response) -> response.request().newBuilder()
                             .header(AUTHORIZATION, "Bearer " + token)
                             .build())
                     .build();
@@ -568,7 +565,7 @@ public class TestResourceSecurity
                 .build()) {
             HttpServerInfo httpServerInfo = server.getInstance(Key.get(HttpServerInfo.class));
 
-            SecretKey hmac = hmacShaKeyFor(Base64.getDecoder().decode(Files.readString(Paths.get(HMAC_KEY)).trim()));
+            SecretKey hmac = hmacShaKeyFor(Base64.getDecoder().decode(Files.readString(Path.of(HMAC_KEY)).trim()));
             JwtBuilder tokenBuilder = newJwtBuilder()
                     .signWith(hmac)
                     .expiration(Date.from(ZonedDateTime.now().plusMinutes(5).toInstant()))
@@ -604,7 +601,7 @@ public class TestResourceSecurity
 
             assertAuthenticationDisabled(httpServerInfo.getHttpUri());
 
-            SecretKey hmac = hmacShaKeyFor(Base64.getDecoder().decode(Files.readString(Paths.get(HMAC_KEY)).trim()));
+            SecretKey hmac = hmacShaKeyFor(Base64.getDecoder().decode(Files.readString(Path.of(HMAC_KEY)).trim()));
             JwtBuilder tokenBuilder = newJwtBuilder()
                     .signWith(hmac)
                     .expiration(Date.from(ZonedDateTime.now().plusMinutes(5).toInstant()))
@@ -617,7 +614,7 @@ public class TestResourceSecurity
             String token = tokenBuilder.compact();
 
             OkHttpClient clientWithJwt = client.newBuilder()
-                    .authenticator((route, response) -> response.request().newBuilder()
+                    .authenticator((_, response) -> response.request().newBuilder()
                             .header(AUTHORIZATION, "Bearer " + token)
                             .build())
                     .build();
@@ -712,7 +709,7 @@ public class TestResourceSecurity
             }
 
             OkHttpClient clientWithOAuthToken = client.newBuilder()
-                    .authenticator((route, response) -> response.request().newBuilder()
+                    .authenticator((_, response) -> response.request().newBuilder()
                             .header(AUTHORIZATION, "Bearer " + getOauthToken(client, bearer.tokenServer()))
                             .build())
                     .build();
@@ -799,14 +796,6 @@ public class TestResourceSecurity
     public void testOAuth2Groups()
             throws Exception
     {
-        testOAuth2Groups(Optional.empty());
-        testOAuth2Groups(Optional.of(ImmutableSet.of()));
-        testOAuth2Groups(Optional.of(ImmutableSet.of("admin", "public")));
-    }
-
-    private void testOAuth2Groups(Optional<Set<String>> groups)
-            throws Exception
-    {
         try (TokenServer tokenServer = new TokenServer(Optional.empty());
                 TestingTrinoServer server = TestingTrinoServer.builder()
                         .setProperties(ImmutableMap.<String, String>builder()
@@ -814,16 +803,15 @@ public class TestResourceSecurity
                                 .put("web-ui.enabled", "true")
                                 .put("http-server.authentication.type", "oauth2")
                                 .putAll(getOAuth2Properties(tokenServer))
-                                .put("deprecated.http-server.authentication.oauth2.groups-field", GROUPS_CLAIM)
                                 .buildOrThrow())
                         .setAdditionalModule(oauth2Module(tokenServer))
                         .setSystemAccessControl(TestSystemAccessControl.NO_IMPERSONATION)
                         .build()) {
             HttpServerInfo httpServerInfo = server.getInstance(Key.get(HttpServerInfo.class));
 
-            String accessToken = tokenServer.issueAccessToken(groups);
+            String accessToken = tokenServer.issueAccessToken();
             OkHttpClient clientWithOAuthToken = client.newBuilder()
-                    .authenticator((route, response) -> response.request().newBuilder()
+                    .authenticator((_, response) -> response.request().newBuilder()
                             .header(AUTHORIZATION, "Bearer " + accessToken)
                             .build())
                     .build();
@@ -837,7 +825,6 @@ public class TestResourceSecurity
                 assertThat(response.code()).isEqualTo(SC_OK);
                 assertThat(response.header("user")).isEqualTo(TEST_USER);
                 assertThat(response.header("principal")).isEqualTo(TEST_USER);
-                assertThat(response.header("groups")).isEqualTo(groups.map(TestResource::toHeader).orElse(""));
             }
 
             OkHttpClient clientWithOAuthCookie = client.newBuilder()
@@ -867,7 +854,6 @@ public class TestResourceSecurity
                 assertThat(response.code()).isEqualTo(SC_OK);
                 assertThat(response.header("user")).isEqualTo(TEST_USER);
                 assertThat(response.header("principal")).isEqualTo(TEST_USER);
-                assertThat(response.header("groups")).isEqualTo(groups.map(TestResource::toHeader).orElse(""));
             }
         }
     }
@@ -905,7 +891,7 @@ public class TestResourceSecurity
             assertAuthenticationDisabled(httpServerInfo.getHttpUri());
 
             OkHttpClient clientWithOAuthToken = client.newBuilder()
-                    .authenticator((route, response) -> response.request().newBuilder()
+                    .authenticator((_, response) -> response.request().newBuilder()
                             .header(AUTHORIZATION, "Bearer " + tokenServer.getAccessToken())
                             .build())
                     .build();
@@ -920,7 +906,7 @@ public class TestResourceSecurity
                     .compact();
 
             OkHttpClient clientWithJwt = client.newBuilder()
-                    .authenticator((route, response) -> response.request().newBuilder()
+                    .authenticator((_, response) -> response.request().newBuilder()
                             .header(AUTHORIZATION, "Bearer " + token)
                             .build())
                     .build();
@@ -962,7 +948,7 @@ public class TestResourceSecurity
                     .compact();
 
             OkHttpClient clientWithJwt = client.newBuilder()
-                    .authenticator((route, response) -> response.request().newBuilder()
+                    .authenticator((_, response) -> response.request().newBuilder()
                             .header(AUTHORIZATION, "Bearer " + token)
                             .build())
                     .build();
@@ -1056,7 +1042,7 @@ public class TestResourceSecurity
             this.principalField = requireNonNull(principalField, "principalField is null");
             jwkServer = createTestingJwkServer();
             jwkServer.start();
-            accessToken = issueAccessToken(Optional.empty());
+            accessToken = issueAccessToken();
         }
 
         @Override
@@ -1089,7 +1075,7 @@ public class TestResourceSecurity
                 }
 
                 @Override
-                public Optional<Map<String, Object>> getClaims(String accessToken)
+                public Optional<Map<String, Object>> getAccessTokenClaims(String accessToken)
                 {
                     return Optional.of(jwtParser.parseSignedClaims(accessToken).getPayload());
                 }
@@ -1139,7 +1125,7 @@ public class TestResourceSecurity
             return REFRESH_TOKEN;
         }
 
-        public String issueAccessToken(Optional<Set<String>> groups)
+        public String issueAccessToken()
         {
             JwtBuilder accessToken = newJwtBuilder()
                     .signWith(JWK_PRIVATE_KEY)
@@ -1153,7 +1139,6 @@ public class TestResourceSecurity
             else {
                 accessToken.subject(TEST_USER);
             }
-            groups.ifPresent(groupsClaim -> accessToken.claim(GROUPS_CLAIM, groupsClaim));
             return accessToken.compact();
         }
 
@@ -1186,8 +1171,8 @@ public class TestResourceSecurity
         {
             this.sessionContextFactory = new HttpRequestSessionContextFactory(
                     new PreparedStatementEncoder(new ProtocolConfig()),
-                    createTestMetadataManager(),
-                    user -> ImmutableSet.of(),
+                    createTestingMetadataManager(),
+                    _ -> ImmutableSet.of(),
                     accessControl,
                     new ProtocolConfig(),
                     QueryDataEncoder.EncoderSelector.noEncoder());
@@ -1215,13 +1200,7 @@ public class TestResourceSecurity
             return jakarta.ws.rs.core.Response.ok()
                     .header("user", identity.getUser())
                     .header("principal", identity.getPrincipal().map(Principal::getName).orElse(null))
-                    .header("groups", toHeader(identity.getGroups()))
                     .build();
-        }
-
-        public static String toHeader(Set<String> groups)
-        {
-            return groups.stream().sorted().collect(Collectors.joining(","));
         }
     }
 
@@ -1348,17 +1327,19 @@ public class TestResourceSecurity
         assertResponseCode(client, url, expectedCode, null, null);
     }
 
-    private static void assertResponseCode(OkHttpClient client,
+    private static void assertResponseCode(
+            OkHttpClient client,
             String url,
             int expectedCode,
             String userName,
             String password)
             throws IOException
     {
-        assertResponseCode(client, url, expectedCode, Headers.of("Authorization", Credentials.basic(firstNonNull(userName, ""), firstNonNull(password, ""))));
+        assertResponseCode(client, url, expectedCode, Headers.of("Authorization", Credentials.basic(requireNonNullElse(userName, ""), requireNonNullElse(password, ""))));
     }
 
-    private static void assertResponseCode(OkHttpClient client,
+    private static void assertResponseCode(
+            OkHttpClient client,
             String url,
             int expectedCode,
             Headers headers)
@@ -1465,10 +1446,10 @@ public class TestResourceSecurity
             throws IOException
     {
         NodeInfo nodeInfo = new NodeInfo("test");
-        HttpServerConfig config = new HttpServerConfig().setHttpPort(0);
-        HttpServerInfo httpServerInfo = new HttpServerInfo(config, nodeInfo);
+        HttpServerConfig config = new HttpServerConfig();
+        HttpServerInfo httpServerInfo = new HttpServerInfo(config, Optional.of(new HttpConfig().setHttpPort(0)), Optional.empty(), nodeInfo);
 
-        return new TestingHttpServer(httpServerInfo, nodeInfo, config, new JwkServlet());
+        return new TestingHttpServer("testing-jwks-server", httpServerInfo, nodeInfo, config, new JwkServlet());
     }
 
     private static class JwkServlet
