@@ -30,10 +30,10 @@
 (requirements-java)=
 ### Java runtime environment
 
-Trino requires a 64-bit version of Java 24, with a minimum required version of
-24.0.1 and a recommendation to use the latest patch version. Earlier versions
-such as Java 8, Java 11, Java 17, Java 21 or Java 23 do not work.
-Newer versions such as Java 25 are not supported -- they may work, but are not tested.
+Trino requires a 64-bit version of Java 25, with a minimum required version of
+25.0.1 and a recommendation to use the latest patch version. Earlier versions
+such as Java 8, Java 11, Java 17, Java 21 or Java 24 do not work.
+Newer versions such as Java 26 are not supported -- they may work, but are not tested.
 
 We recommend using the Eclipse Temurin OpenJDK distribution from
 [Adoptium](https://adoptium.net/) as the JDK for Trino, as Trino is tested
@@ -42,12 +42,12 @@ Docker image](https://hub.docker.com/r/trinodb/trino).
 
 ## Installing Trino
 
-Download the Trino server tarball, {maven_download}`server`, and unpack it. The
+Download the Trino server tarball, {download_gh}`server`, and unpack it. The
 tarball contains a single top-level directory, `trino-server-|trino_version|`,
 which we call the *installation* directory.
 
 The default tarball contains all plugins and must be configured for use. The
-minimal `server-core` tarball, {maven_download}`server-core`, contains a minimal
+minimal `server-core` tarball, {download_gh}`server-core`, contains a minimal
 set of essential plugins, and it is therefore mostly suitable as a base for
 custom tarball creation.
 
@@ -138,9 +138,7 @@ The following provides a good starting point for creating `etc/jvm.config`:
 -XX:PerBytecodeRecompilationCutoff=10000
 -Djdk.attach.allowAttachSelf=true
 -Djdk.nio.maxCachedBufferSize=2000000
--Dfile.encoding=UTF-8
-# Allow loading dynamic agent used by JOL
--XX:+EnableDynamicAgentLoading
+--add-modules=jdk.incubator.vector
 ```
 
 You must adjust the value for the memory used by Trino, specified with `-Xmx`
