@@ -23,6 +23,7 @@ import io.trino.metadata.QualifiedObjectName;
 import io.trino.metastore.Database;
 import io.trino.metastore.HiveMetastore;
 import io.trino.metastore.HiveMetastoreFactory;
+import io.trino.parquet.crypto.DecryptionKeyRetriever;
 import io.trino.plugin.tpcds.TpcdsPlugin;
 import io.trino.plugin.tpch.ColumnNaming;
 import io.trino.plugin.tpch.DecimalTypeMapping;
@@ -37,15 +38,16 @@ import org.intellij.lang.annotations.Language;
 import org.joda.time.DateTimeZone;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.function.Consumer;
 import java.util.function.Function;
 
 import static io.airlift.log.Level.WARN;
 import static io.airlift.units.Duration.nanosSince;
+import static io.trino.plugin.hive.HiveTestUtils.SESSION;
 import static io.trino.plugin.hive.TestingHiveUtils.getConnectorService;
 import static io.trino.plugin.tpch.ColumnNaming.SIMPLIFIED;
 import static io.trino.plugin.tpch.DecimalTypeMapping.DOUBLE;
@@ -82,17 +84,28 @@ public final class HiveQueryRunner
         return builder().build();
     }
 
-    public static Builder<Builder<?>> builder()
+    public static ConcreteBuilder builder()
     {
-        return new Builder<>();
+        return new ConcreteBuilder();
     }
 
-    public static Builder<Builder<?>> builder(Session defaultSession)
+    public static ConcreteBuilder builder(Session defaultSession)
     {
-        return new Builder<>(defaultSession);
+        return new ConcreteBuilder(defaultSession);
     }
 
-    public static class Builder<SELF extends Builder<?>>
+    public static final class ConcreteBuilder
+            extends Builder<ConcreteBuilder>
+    {
+        private ConcreteBuilder() {}
+
+        private ConcreteBuilder(Session defaultSession)
+        {
+            super(defaultSession);
+        }
+    }
+
+    public static class Builder<SELF extends Builder<SELF>>
             extends DistributedQueryRunner.Builder<SELF>
     {
         private boolean skipTimezoneSetup;
@@ -100,11 +113,13 @@ public final class HiveQueryRunner
         private List<TpchTable<?>> initialTables = ImmutableList.of();
         private Optional<String> initialSchemasLocationBase = Optional.empty();
         private Optional<Function<DistributedQueryRunner, HiveMetastore>> metastore = Optional.empty();
+        private boolean metastoreImpersonationEnabled;
         private boolean tpcdsCatalogEnabled;
         private boolean tpchBucketedCatalogEnabled;
         private boolean createTpchSchemas = true;
         private ColumnNaming tpchColumnNaming = SIMPLIFIED;
         private DecimalTypeMapping tpchDecimalTypeMapping = DOUBLE;
+        private Optional<DecryptionKeyRetriever> decryptionKeyRetriever = Optional.empty();
 
         protected Builder()
         {
@@ -139,6 +154,13 @@ public final class HiveQueryRunner
         }
 
         @CanIgnoreReturnValue
+        public SELF addHiveProperties(Map<String, String> hiveProperties)
+        {
+            this.hiveProperties.putAll(requireNonNull(hiveProperties, "hiveProperties is null"));
+            return self();
+        }
+
+        @CanIgnoreReturnValue
         public SELF setInitialTables(Iterable<TpchTable<?>> initialTables)
         {
             this.initialTables = ImmutableList.copyOf(requireNonNull(initialTables, "initialTables is null"));
@@ -156,6 +178,13 @@ public final class HiveQueryRunner
         public SELF setMetastore(Function<DistributedQueryRunner, HiveMetastore> metastore)
         {
             this.metastore = Optional.of(metastore);
+            return self();
+        }
+
+        @CanIgnoreReturnValue
+        public SELF setMetastoreImpersonationEnabled(boolean metastoreImpersonationEnabled)
+        {
+            this.metastoreImpersonationEnabled = metastoreImpersonationEnabled;
             return self();
         }
 
@@ -196,6 +225,20 @@ public final class HiveQueryRunner
             return self();
         }
 
+        @CanIgnoreReturnValue
+        public SELF setDecryptionKeyRetriever(DecryptionKeyRetriever decryptionKeyRetriever)
+        {
+            this.decryptionKeyRetriever = Optional.of(requireNonNull(decryptionKeyRetriever, "decryptionKeyRetriever is null"));
+            return self();
+        }
+
+        @CanIgnoreReturnValue
+        public SELF apply(Consumer<SELF> consumer)
+        {
+            requireNonNull(consumer, "consumer is null").accept(self());
+            return self();
+        }
+
         @Override
         public DistributedQueryRunner build()
                 throws Exception
@@ -218,16 +261,7 @@ public final class HiveQueryRunner
                 Optional<HiveMetastore> metastore = this.metastore.map(factory -> factory.apply(queryRunner));
                 Path dataDir = queryRunner.getCoordinator().getBaseDataDir().resolve("hive_data");
 
-                if (metastore.isEmpty() && !hiveProperties.buildOrThrow().containsKey("hive.metastore")) {
-                    hiveProperties.put("hive.metastore", "file");
-                    hiveProperties.put("hive.metastore.catalog.dir", queryRunner.getCoordinator().getBaseDataDir().resolve("hive_data").toString());
-                }
-                if (hiveProperties.buildOrThrow().keySet().stream().noneMatch(key ->
-                        key.equals("fs.hadoop.enabled") || key.startsWith("fs.native-"))) {
-                    hiveProperties.put("fs.hadoop.enabled", "true");
-                }
-
-                queryRunner.installPlugin(new TestingHivePlugin(dataDir, metastore));
+                queryRunner.installPlugin(new TestingHivePlugin(dataDir, metastore, metastoreImpersonationEnabled, decryptionKeyRetriever));
 
                 Map<String, String> hiveProperties = new HashMap<>();
                 if (!skipTimezoneSetup) {
@@ -245,7 +279,6 @@ public final class HiveQueryRunner
                 if (tpchBucketedCatalogEnabled) {
                     Map<String, String> hiveBucketedProperties = ImmutableMap.<String, String>builder()
                             .putAll(hiveProperties)
-                            .put("hive.max-initial-split-size", "10kB") // so that each bucket has multiple splits
                             .put("hive.max-split-size", "10kB") // so that each bucket has multiple splits
                             .put("hive.storage-format", "TEXTFILE") // so that there's no minimum split size for the file
                             .buildOrThrow();
@@ -271,16 +304,21 @@ public final class HiveQueryRunner
         private void populateData(QueryRunner queryRunner)
         {
             HiveMetastore metastore = getConnectorService(queryRunner, HiveMetastoreFactory.class)
-                    .createMetastore(Optional.empty());
+                    .createMetastore(Optional.of(SESSION.getIdentity()));
             if (metastore.getDatabase(TPCH_SCHEMA).isEmpty()) {
                 metastore.createDatabase(createDatabaseMetastoreObject(TPCH_SCHEMA, initialSchemasLocationBase));
                 copyTpchTables(queryRunner, "tpch", TINY_SCHEMA_NAME, initialTables);
             }
 
-            if (tpchBucketedCatalogEnabled && metastore.getDatabase(TPCH_BUCKETED_SCHEMA).isEmpty()) {
-                metastore.createDatabase(createDatabaseMetastoreObject(TPCH_BUCKETED_SCHEMA, initialSchemasLocationBase));
-                Session session = createBucketedSession(Optional.empty());
-                copyTpchTablesBucketed(queryRunner, "tpch", TINY_SCHEMA_NAME, session, initialTables, tpchColumnNaming);
+            if (tpchBucketedCatalogEnabled) {
+                metastore = ((HiveConnector) queryRunner.getCoordinator().getConnector(HiveQueryRunner.HIVE_BUCKETED_CATALOG))
+                        .getInjector().getInstance(HiveMetastoreFactory.class)
+                        .createMetastore(Optional.of(SESSION.getIdentity()));
+                if (metastore.getDatabase(TPCH_BUCKETED_SCHEMA).isEmpty()) {
+                    metastore.createDatabase(createDatabaseMetastoreObject(TPCH_BUCKETED_SCHEMA, initialSchemasLocationBase));
+                    Session session = createBucketedSession(Optional.empty());
+                    copyTpchTablesBucketed(queryRunner, "tpch", TINY_SCHEMA_NAME, session, initialTables, tpchColumnNaming);
+                }
             }
         }
     }
@@ -311,7 +349,8 @@ public final class HiveQueryRunner
     {
         return testSessionBuilder()
                 .setIdentity(Identity.forUser("hive")
-                        .withConnectorRoles(role.map(selectedRole -> ImmutableMap.of(
+                        .withConnectorRoles(role
+                                .map(selectedRole -> ImmutableMap.of(
                                         HIVE_CATALOG, selectedRole,
                                         HIVE_BUCKETED_CATALOG, selectedRole))
                                 .orElse(ImmutableMap.of()))
@@ -337,40 +376,27 @@ public final class HiveQueryRunner
     private static void copyTableBucketed(QueryRunner queryRunner, QualifiedObjectName tableName, TpchTable<?> table, Session session, ColumnNaming columnNaming)
     {
         long start = System.nanoTime();
-        @Language("SQL") String sql;
-        switch (tableName.objectName()) {
-            case "part":
-            case "partsupp":
-            case "supplier":
-            case "nation":
-            case "region":
-                sql = format("CREATE TABLE %s AS SELECT * FROM %s", tableName.objectName(), tableName);
-                break;
-            case "lineitem":
-                sql = format(
-                        "CREATE TABLE %s WITH (bucketed_by=array['%s'], bucket_count=11) AS SELECT * FROM %s",
-                        tableName.objectName(),
-                        columnNaming.getName(table.getColumn("orderkey")),
-                        tableName);
-                break;
-            case "customer":
-            case "orders":
-                sql = format(
-                        "CREATE TABLE %s WITH (bucketed_by=array['%s'], bucket_count=11) AS SELECT * FROM %s",
-                        tableName.objectName(),
-                        columnNaming.getName(table.getColumn("custkey")),
-                        tableName);
-                break;
-            default:
-                throw new UnsupportedOperationException();
-        }
+        @Language("SQL") String sql = switch (tableName.objectName()) {
+            case "part", "partsupp", "supplier", "nation", "region" -> format("CREATE TABLE %s AS SELECT * FROM %s", tableName.objectName(), tableName);
+            case "lineitem" -> format(
+                    "CREATE TABLE %s WITH (bucketed_by=array['%s'], bucket_count=11) AS SELECT * FROM %s",
+                    tableName.objectName(),
+                    columnNaming.getName(table.getColumn("orderkey")),
+                    tableName);
+            case "customer", "orders" -> format(
+                    "CREATE TABLE %s WITH (bucketed_by=array['%s'], bucket_count=11) AS SELECT * FROM %s",
+                    tableName.objectName(),
+                    columnNaming.getName(table.getColumn("custkey")),
+                    tableName);
+            default -> throw new UnsupportedOperationException();
+        };
         long rows = (Long) queryRunner.execute(session, sql).getMaterializedRows().get(0).getField(0);
         log.info("Imported %s rows from %s in %s", rows, tableName, nanosSince(start));
     }
 
     public static final class DefaultHiveQueryRunnerMain
     {
-        public static void main(String[] args)
+        static void main(String[] args)
                 throws Exception
         {
             Optional<Path> baseDataDir = Optional.empty();
@@ -380,7 +406,7 @@ public final class HiveQueryRunner
                     System.exit(1);
                 }
 
-                Path path = Paths.get(args[0]);
+                Path path = Path.of(args[0]);
                 createDirectories(path);
                 baseDataDir = Optional.of(path);
             }
@@ -394,8 +420,8 @@ public final class HiveQueryRunner
                     .setTpcdsCatalogEnabled(true)
                     // Uncomment to enable standard column naming (column names to be prefixed with the first letter of the table name, e.g.: o_orderkey vs orderkey)
                     // and standard column types (decimals vs double for some columns). This will allow running unmodified tpch queries on the cluster.
-                    //.setTpchColumnNaming(ColumnNaming.STANDARD)
-                    //.setTpchDecimalTypeMapping(DecimalTypeMapping.DECIMAL)
+                    // .setTpchColumnNaming(ColumnNaming.STANDARD)
+                    // .setTpchDecimalTypeMapping(DecimalTypeMapping.DECIMAL)
                     .build();
             log.info("======== SERVER STARTED ========");
             log.info("\n====\n%s\n====", queryRunner.getCoordinator().getBaseUrl());
@@ -406,7 +432,7 @@ public final class HiveQueryRunner
     {
         private HiveGlueQueryRunnerMain() {}
 
-        public static void main(String[] args)
+        static void main()
                 throws Exception
         {
             // Requires AWS credentials, which can be provided any way supported by the DefaultProviderChain
@@ -424,6 +450,36 @@ public final class HiveQueryRunner
                     .build();
 
             Logger log = Logger.get(HiveGlueQueryRunnerMain.class);
+            log.info("======== SERVER STARTED ========");
+            log.info("\n====\n%s\n====", queryRunner.getCoordinator().getBaseUrl());
+        }
+    }
+
+    public static final class HiveLocalFileSystemQueryRunnerMain
+    {
+        private HiveLocalFileSystemQueryRunnerMain() {}
+
+        static void main(String[] args)
+                throws Exception
+        {
+            Path storageDir = args.length > 0 ? Path.of(args[0]) : Path.of(System.getProperty("user.home"), "hive-local-storage");
+            createDirectories(storageDir);
+            //noinspection resource
+            DistributedQueryRunner queryRunner = HiveQueryRunner.builder(testSessionBuilder()
+                            .setCatalog("hive")
+                            .setSchema("tpch")
+                            .build())
+                    .addCoordinatorProperty("http-server.http.port", "8080")
+                    .addHiveProperty("hive.metastore", "file")
+                    .addHiveProperty("fs.hadoop.enabled", "false")
+                    .addHiveProperty("hive.non-managed-table-writes-enabled", "true")
+                    .addHiveProperty("hive.security", "allow-all")
+                    .setBaseDataDir(Optional.of(storageDir))
+                    .setCreateTpchSchemas(false)
+                    .setSkipTimezoneSetup(true)
+                    .build();
+
+            Logger log = Logger.get(HiveLocalFileSystemQueryRunnerMain.class);
             log.info("======== SERVER STARTED ========");
             log.info("\n====\n%s\n====", queryRunner.getCoordinator().getBaseUrl());
         }
