@@ -26,7 +26,7 @@ import org.intellij.lang.annotations.Language;
 import org.testcontainers.containers.Container;
 import org.testcontainers.containers.GenericContainer;
 import org.testcontainers.containers.Network;
-import org.testcontainers.containers.PostgreSQLContainer;
+import org.testcontainers.postgresql.PostgreSQLContainer;
 import org.testcontainers.utility.DockerImageName;
 import org.testcontainers.utility.MountableFile;
 
@@ -35,7 +35,6 @@ import java.io.IOException;
 import java.net.URI;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.sql.Connection;
 import java.sql.DriverManager;
 import java.sql.SQLException;
@@ -44,6 +43,7 @@ import java.util.Arrays;
 
 import static com.google.common.base.Preconditions.checkState;
 import static com.google.common.base.Verify.verify;
+import static io.airlift.http.client.HeaderNames.CONTENT_TYPE;
 import static io.airlift.http.client.StaticBodyGenerator.createStaticBodyGenerator;
 import static io.airlift.http.client.StringResponseHandler.createStringResponseHandler;
 import static java.lang.String.format;
@@ -58,7 +58,7 @@ public class UnityCatalogContainer
 
     private final String catalogName;
     private final String schemaName;
-    private final PostgreSQLContainer<?> postgreSql;
+    private final PostgreSQLContainer postgreSql;
     private final GenericContainer<?> unityCatalog;
     private final QueryRunner queryRunner;
     private final AutoCloseableCloser closer = AutoCloseableCloser.create();
@@ -72,8 +72,7 @@ public class UnityCatalogContainer
         Network network = Network.newNetwork();
         closer.register(network);
 
-        //noinspection resource
-        postgreSql = new PostgreSQLContainer<>(DockerImageName.parse("postgres"))
+        postgreSql = new PostgreSQLContainer(DockerImageName.parse("postgres"))
                 .withNetwork(network)
                 .withNetworkAliases("postgres");
         postgreSql.start();
@@ -107,6 +106,7 @@ public class UnityCatalogContainer
 
         // QueryRunner used to create tables
         queryRunner = IcebergQueryRunner.builder()
+                .addIcebergProperty("fs.hadoop.enabled", "true")
                 .addIcebergProperty("hive.metastore.catalog.dir", metastoreDir.toURI().toString())
                 .build();
     }
@@ -166,7 +166,7 @@ public class UnityCatalogContainer
                 "}";
         Request request = Request.Builder.preparePost()
                 .setUri(URI.create(uri() + "/tables"))
-                .setHeader("Content-Type", "application/json")
+                .setHeader(CONTENT_TYPE, "application/json")
                 .setBodyGenerator(createStaticBodyGenerator(body, UTF_8))
                 .build();
         execute(request);
@@ -176,7 +176,7 @@ public class UnityCatalogContainer
                 "SET uniform_iceberg_metadata_location = '" + metadataFilePath + "'" +
                 "WHERE name = '" + tableName + "'");
 
-        Path absoluteMetadataFilePath = Paths.get(URI.create(metadataFilePath));
+        Path absoluteMetadataFilePath = Path.of(URI.create(metadataFilePath));
         Path metadataDirectory = absoluteMetadataFilePath.getParent();
         verify(metadataDirectory.endsWith("metadata"));
         File tableDirectory = metadataDirectory.getParent().toFile();
