@@ -25,7 +25,6 @@ import java.io.IOException;
 import java.io.PrintStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
@@ -199,7 +198,7 @@ public class Verifier
             QueryResult controlResult = validator.getControlResult();
             if (simplifiedControlQueriesGenerationEnabled && controlResult.getState() == SUCCESS) {
                 QueryPair queryPair = validator.getQueryPair();
-                Path path = Paths.get(format(
+                Path path = Path.of(format(
                         "%s/%s/%s/%s.sql",
                         simplifiedControlQueriesOutputDirectory,
                         runId,
@@ -329,7 +328,7 @@ public class Verifier
         if (result.isEmpty()) {
             return null;
         }
-        return result.getAsDouble();
+        return result.orElseThrow();
     }
 
     private static <T> T takeUnchecked(CompletionService<T> completionService)
@@ -395,27 +394,14 @@ public class Verifier
     private static String getLiteral(String type, Optional<String> value)
     {
         String baseType = getBaseType(type);
-        switch (baseType) {
-            case "TINYINT":
-            case "SMALLINT":
-            case "INTEGER":
-            case "BIGINT":
-            case "DECIMAL":
-            case "DATE":
-            case "TIME":
-            case "REAL":
-            case "DOUBLE":
-                return value.map(v -> baseType + " '" + v + "'").orElse("NULL");
-            case "CHAR":
-            case "VARCHAR":
-                return value.map(v -> baseType + " '" + v.replaceAll("'", "''") + "'").orElse("NULL");
-            case "VARBINARY":
-                return value.map(v -> "X'" + v + "'").orElse("NULL");
-            case "UNKNOWN":
-                return "NULL";
-            default:
-                throw new IllegalArgumentException(format("Unexpected type: %s", type));
-        }
+        return switch (baseType) {
+            case "TINYINT", "SMALLINT", "INTEGER", "BIGINT", "DECIMAL",
+                 "DATE", "TIME", "REAL", "DOUBLE" -> value.map(v -> baseType + " '" + v + "'").orElse("NULL");
+            case "CHAR", "VARCHAR" -> value.map(v -> baseType + " '" + v.replaceAll("'", "''") + "'").orElse("NULL");
+            case "VARBINARY" -> value.map(v -> "X'" + v + "'").orElse("NULL");
+            case "UNKNOWN" -> "NULL";
+            default -> throw new IllegalArgumentException(format("Unexpected type: %s", type));
+        };
     }
 
     private static String getBaseType(String type)
