@@ -62,10 +62,12 @@ import io.trino.sql.tree.ShowSession;
 import io.trino.sql.tree.ShowTables;
 import io.trino.sql.tree.Statement;
 import io.trino.verifier.QueryRewriter.QueryRewriteException;
+import io.trino.verifier.VerifyCommand.VersionProvider;
 import org.jdbi.v3.core.ConnectionFactory;
 import org.jdbi.v3.core.Jdbi;
 import org.jdbi.v3.sqlobject.SqlObjectPlugin;
 import picocli.CommandLine.Command;
+import picocli.CommandLine.IVersionProvider;
 import picocli.CommandLine.Model.CommandSpec;
 import picocli.CommandLine.Option;
 import picocli.CommandLine.Parameters;
@@ -77,7 +79,7 @@ import java.io.UncheckedIOException;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLClassLoader;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.sql.Driver;
 import java.sql.DriverManager;
 import java.sql.SQLException;
@@ -91,18 +93,16 @@ import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ExecutorCompletionService;
 import java.util.concurrent.ExecutorService;
 
-import static com.google.common.base.MoreObjects.firstNonNull;
 import static com.google.common.base.Preconditions.checkArgument;
 import static com.google.common.base.Throwables.throwIfUnchecked;
 import static com.google.common.collect.ImmutableList.toImmutableList;
 import static io.trino.verifier.QueryType.CREATE;
 import static io.trino.verifier.QueryType.MODIFY;
 import static io.trino.verifier.QueryType.READ;
-import static io.trino.verifier.VerifyCommand.VersionProvider;
 import static java.util.Objects.requireNonNull;
+import static java.util.Objects.requireNonNullElse;
 import static java.util.concurrent.Executors.newFixedThreadPool;
 import static java.util.concurrent.TimeUnit.MINUTES;
-import static picocli.CommandLine.IVersionProvider;
 
 @Command(
         name = "verifier",
@@ -183,7 +183,7 @@ public class VerifyCommand
                 }
             }
             // TODO: construct this with Guice
-            int numFailedQueries = new Verifier(System.out, config, injector.getInstance(new Key<>(){}))
+            int numFailedQueries = new Verifier(System.out, config, injector.getInstance(new Key<>() {}))
                     .run(queries);
             System.exit((numFailedQueries > 0) ? 1 : 0);
         }
@@ -218,10 +218,10 @@ public class VerifyCommand
         ImmutableList.Builder<URL> urlList = ImmutableList.builder();
         File driverPath = new File(path);
         if (!driverPath.isDirectory()) {
-            urlList.add(Paths.get(path).toUri().toURL());
+            urlList.add(Path.of(path).toUri().toURL());
             return urlList.build();
         }
-        File[] files = driverPath.listFiles((dir, name) -> {
+        File[] files = driverPath.listFiles((_, name) -> {
             return name.endsWith(".jar");
         });
         if (files == null) {
@@ -232,7 +232,7 @@ public class VerifyCommand
             if (file.isDirectory()) {
                 continue;
             }
-            urlList.add(Paths.get(file.getAbsolutePath()).toUri().toURL());
+            urlList.add(Path.of(file.getAbsolutePath()).toUri().toURL());
         }
         return urlList.build();
     }
@@ -504,7 +504,7 @@ public class VerifyCommand
         public String[] getVersion()
         {
             String version = getClass().getPackage().getImplementationVersion();
-            return new String[] {spec.name() + " " + firstNonNull(version, "(version unknown)")};
+            return new String[] {spec.name() + " " + requireNonNullElse(version, "(version unknown)")};
         }
     }
 
