@@ -35,7 +35,6 @@ import java.io.OutputStream;
 import java.io.UncheckedIOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.time.Instant;
 import java.util.List;
 import java.util.Map;
@@ -122,6 +121,12 @@ public class LocalSpoolingManager
     public Optional<DirectLocation> directLocation(SpooledSegmentHandle handle)
     {
         throw new UnsupportedOperationException();
+    }
+
+    @Override
+    public boolean isRecoverableException(IOException exception)
+    {
+        return false;
     }
 
     @PreDestroy
@@ -221,7 +226,7 @@ public class LocalSpoolingManager
                 @JsonProperty("encoding") String encoding,
                 @JsonProperty("path") String path)
         {
-            return new LocalSpooledSegmentHandle(encoding, Paths.get(path));
+            return new LocalSpooledSegmentHandle(encoding, Path.of(path));
         }
     }
 }
